--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 .header {
       background-color: salmon;
+  height:300px;
       border-radius: 40px / 20px; /* Horizontal radius of 70px, vertical radius of 30px */
     }
 }
