--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .header {
       background-color: salmon;
-  height:50px;
+  width:60%;
       border-radius: 40px / 20px; /* Horizontal radius of 70px, vertical radius of 30px */
     }
 }
