--- a/style.css
+++ b/style.css
@@ -11,5 +11,6 @@
   background-color: salmon;
   width: 60%;
   margin: 0 auto;
-  border-radius: 40px / 20px;
+  padding: 20px 0;
+  border-radius: 25px;
 }
