--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@ html {
 }
 
 body {
-  background-color: #0b1a2b;
+  background-image: linear-gradient(to bottom, #000000, #162447); 
   color: #f0f0f0;
   margin: 0;
   padding: 0;
+  height: 150vh; 
 }
 
 .secret {
@@ -25,6 +26,6 @@ body {
   padding: 15px 0;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  background-image: linear-gradient(to right, #1f4068, #162447);
-  color: #ffffff;
+  background-color: salmon; 
+  color: #000000; 
 }
