--- a/style.css
+++ b/style.css
@@ -26,6 +26,6 @@ body {
   padding: 15px 0;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  background-color: #39729e; 
+  background-color: #23487d; 
   color: white; 
 }
