--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   margin: 0;
   padding: 0;
   height: 150vh; 
-    font-family: 'Mrs Sheppards', cursive;
+   font-family: "Mrs Sheppards", cursive;
 }
 
 .secret {
@@ -28,7 +28,7 @@ body {
 }
 
 .header {
-  font-family: 'Mrs Sheppards', cursive;
+font-family: "Mrs Sheppards", cursive;
   width: 60%;
   margin: 40px auto 20px auto;
   padding: 15px 0;
@@ -37,4 +37,6 @@ body {
   background-color: #23487d; 
   color: white; 
 }
-p {  font-family: 'Mrs Sheppards', cursive;}
+p {
+  font-family: "Mrs Sheppards", cursive;
+}
